<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/simpleSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="91dp" />

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="303dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="252dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btndistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/button0" />

        <Button
            android:id="@+id/btnweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttton2" />

        <Button
            android:id="@+id/btntemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/button3" />


    <Button
        android:id="@+id/hist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/button3" />

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>